# blockwright

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.en.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
apps/controller/: Cargo.toml
apps/controller/codex-home-template/skills/blockwright-blueprint-verification/: SKILL.md
apps/controller/codex-home-template/skills/blockwright-build-planning/: SKILL.md
apps/controller/codex-home-template/skills/blockwright-command-actions/: SKILL.md
apps/controller/codex-home-template/skills/blockwright-existing-build-edit/: SKILL.md
apps/controller/codex-home-template/skills/blockwright-image-to-blueprint/: SKILL.md
apps/controller/codex-home-template/skills/blockwright-site-selection/: SKILL.md
apps/controller/schemas/: action-plan.schema.json  blueprint.schema.json  existing-edit-plan.schema.json  intent.schema.json  plan.schema.json
apps/controller/src/: app.rs  config.rs  https.rs  lib.rs  main.rs  mcp.rs  state.rs
apps/controller/src/domain/: types.rs
apps/controller/src/http/: auth.rs  blueprints.rs  builds.rs  chat.rs  health.rs  llm.rs  mcp_bridge.rs  minecraft.rs  mod.rs  robot.rs  web.rs  web_chat.html
apps/controller/src/integrations/: codex.rs  codex_home.rs  llm.rs  matrix.rs  mod.rs
apps/controller/src/services/: blueprint_store.rs  build_store.rs  chat.rs  image_blueprint.rs  job_queue.rs  mod.rs  planner.rs  progress.rs
apps/controller/tests/: api.rs
config/: chat.example.yaml  (+1 more)
(+98 files in other folders)
