[package]
name = "blockwright-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
dotenvy = "0.15"
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yaml_serde = "0.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
