[package]
name = "blockwright-controller"
version = "0.1.2"
edition = "2021"

[dependencies]
axum = "0.8"
base64 = "0.22"
dotenvy = "0.15"
include_dir = "0.7"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yaml_serde = "0.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
